[package]
name = "r2p"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
config = "0.14.0"
serde = { version = "1.0.202", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1.36.0", features = ["full"] }

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "r2p"

[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[dev-dependencies]
reqwest = { version = "0.12.4", features = ["trust-dns"] }
