[package]
name = "r2p"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
config = "0.15.4"
serde = { version = "1.0.216", features = ["derive"] }
sqlx = { version = "0.8.2", features = [
	"runtime-tokio-rustls", 
	"macros", 
	"postgres", 
	"uuid", 
	"chrono", 
	"migrate"
  ]}

tokio = { version = "1.42.0", features = ["full"] }
tracing = { version = "0.1.41", features = ["log"] }

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "r2p"

[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[dev-dependencies]
reqwest = { version = "0.12.9", features = ["trust-dns"] }
